# fluid-dynamics-simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: parse_args.h
examples/mpi/: main.cpp
examples/serial/: main.cpp
inc/: bound.h  bound.tpp  grid.h  grid.tpp  grid_io_serial.h  mpipoisson2d.h  poisson2d.h  solver.h  solver.tpp  solver_parallel.tpp  solver_serial.tpp
inc/poisson2d/: bound.h  bound.tpp  grid.h  grid.tpp  grid_io.h  grid_io.tpp  grid_io_parallel.tpp  grid_io_serial.tpp  mpi_util.h  mpi_util.tpp  mpipoisson2d.h  poisson2d.h  poisson2d_mpi.h  solver.h  solver.tpp  solver_mpi.h  solver_mpi.tpp  solver_parallel.tpp  solver_serial.tpp
inc/poisson2d/fluid_dynamics/: bound.tpp  grid.h  grid.tpp  grid_io.h  grid_io.tpp  mpi_util.h  mpi_util.tpp  solver.h  solver.tpp  solver_mpi.h  solver_mpi.tpp
plot/: plot.py  requirements.txt
src/: main.cpp
test/: CMakeLists.txt  test_bound.cpp  test_grid.cpp  test_solver.cpp  test_utils.h
